--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Baloo+Paaji+2:wght@400;500;600;700;800&family=M+PLUS+Rounded+1c:wght@400;900&family=Oswald:wght@200;500;600&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
 
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/script.js"></script>
